# vsc_world_causal_planner_v1

./: .gitignore  FULL_SYSTEM_WRITEUP.md  README.md  conftest.py  pyproject.toml  pyproject.toml.bak  requirements.txt
artifacts/: report.json
corpora/: real_text_samples.txt
experiments/: agent_chat_demo.py  eval_neural_parser.py  gen_enhanced_sentence_pairs.py  llm_head_to_head_prompt_pack.py  llm_head_to_head_score.py  stress_verified_chat.py  stress_verified_chat_attacks.py  text_block_beam_bench.py  text_block_beam_search_demo.py  text_block_complex_sweep_demo.py  text_block_counterfactual_explain_demo.py  text_block_hier_demo.py  text_block_macro_beam_bench.py  text_block_tradeoff_demo.py  text_block_world_demo.py  text_document_demo.py  text_document_tradeoff_demo.py  text_enhanced_sentence_demo.py  text_full_stack_demo.py  text_grammar_bootstrap_demo.py  text_paragraph_demo.py  text_paragraph_world_demo.py  text_personality_agent_demo.py  text_real_input_full_stack_probe.py  text_self_prompt_loop_demo.py  text_sentence_clean_demo.py  text_sentence_demo.py  text_sentence_render_parse_demo.py  text_visualize_full_stack.py  train_neural_parser.py  verify_enhanced_dataset_roundtrip.py
results/: cid_ladder_witness.json  cid_ladder_witness.unsealed.json  demo_chat_loop_trace_seed0_eps0p12.json  text_block_tradeoff_demo.json  text_block_tradeoff_demo_n16.json  text_block_tradeoff_demo_n32.json  text_block_world_demo.json  text_block_world_demo_n16.json  text_block_world_demo_n32.json  text_document_demo.json  text_document_tradeoff_demo.json  text_paragraph_demo.json  (+5 more)
(+109 files in other folders)
