[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsc_world_causal_planner"
version = "0.1.0"
description = "Operational harness: SCM(do) + tiny MDP world model + planner + safety constraint, with explicit PASS metrics."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "pytest>=7.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["vsc_repo*"]
